# dotter

./: .gitignore  .gitmodules  Cargo.toml  README.md  Vagrantfile  build.rs
samples/: inventory.json  inventory.toml  small.json
src/: group.rs  homebrew.rs  inventory.rs  main.rs  shell.rs  symlinks.rs
